Fix background not visible on mobile devices.

--- a/style.css
+++ b/style.css
@@ -410,7 +410,7 @@
 @media only screen and (max-width: 1080px) {
     /* HOME */
     #home {
-        background: url(../images/backgroundHomeMobile.png);
+        background: url(resources/Background.png);
         background-size: cover;
     }
 }
@@ -418,7 +418,7 @@
 @media only screen and (max-height: 720px) {
     /* HOME */
     #home {
-        background: url(../images/backgroundHomeMobile.png);
+        background: url(resources/Background.png);
         background-size: cover;
     }
 }
